# WienerTakesAll

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  WienerTakesAll  WienerTakesAll.rc  WienerTakesAll.sln  WienerTakesAll.vcxproj  WienerTakesAll.vcxproj.filters  build.sh  docker_build.sh  installer.sh  resource.h  tree.txt
assets/models/: Arena.mtl  NoWienerCarModel.mtl  OnlyBunCar.mtl  Skybox.mtl  TableMap.mtl  WienerCarModel.mtl  basket.mtl  carBoxModel.mtl  fruit.mtl
assets/shaders/: OutlineShader.frag  OutlineShader.vert  ParticleShader.frag  ParticleShader.vert  ShadowShader.frag  ShadowShader.vert  SimpleFragmentShader.fragmentshader  SimpleShader.frag  SimpleShader.vert  SimpleVertexShader.vertexshader  SkyboxShader.frag  SkyboxShader.vert  TextureShader.frag  TextureShader.vert  UIShader.frag  UIShader.vert
assets/textures/: wienertakesall-logo.xcf
config/: config.yml
src/: AiSystem.cpp  AiSystem.h  AssetManager.cpp  AssetManager.h  AudioSettings.h  AudioSystem.cpp  AudioSystem.h  CarControlType.h  CarControls.h  CollisionEventsSubsystem.cpp  CollisionEventsSubsystem.h  CollisionFlags.h  EndGameScreen.cpp  EndGameScreen.h  Event.cpp  Event.h  Event.impl  EventSystem.h  EventSystem.impl  EventSystem_impl.h  Event_impl.h  ExampleClass.h  FrictionPairService.cpp  FrictionPairService.h  GameObject.cpp  GameObject.h  GameObjectCounter.cpp  GameObjectCounter.h  GameState.h  GameplayHud.cpp  GameplayHud.h  GameplaySystem.cpp  GameplaySystem.h  InputManager.cpp  InputManager.h  InputSettings.cpp  InputSettings.h  LoadingScreen.cpp  LoadingScreen.h  MeshAsset.h  (+64 more)
